<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <EditText
        android:id="@+id/editNewFullname"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/rounded_buttons"
        android:hint="@string/editFullname"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="#E1E1E1"
        android:textColorHint="#E1E1E1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSelectPhoto" />

    <EditText
        android:id="@+id/editNewCountry"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_buttons"
        android:ems="10"
        android:hint="@string/editCountry"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="#E1E1E1"
        android:textColorHint="#E1E1E1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/editNewFullname"
        app:layout_constraintStart_toStartOf="@+id/editNewFullname"
        app:layout_constraintTop_toBottomOf="@+id/editNewFullname" />

    <EditText
        android:id="@+id/editNewContinent"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_buttons"
        android:ems="10"
        android:hint="@string/editContinent"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="#E1E1E1"
        android:textColorHint="#E1E1E1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/editNewCountry"
        app:layout_constraintStart_toStartOf="@+id/editNewCountry"
        app:layout_constraintTop_toBottomOf="@+id/editNewCountry" />

    <EditText
        android:id="@+id/editNewYear"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_buttons"
        android:ems="10"
        android:hint="@string/editYear"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="#E1E1E1"
        android:textColorHint="#E1E1E1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/editNewContinent"
        app:layout_constraintStart_toStartOf="@+id/editNewContinent"
        app:layout_constraintTop_toBottomOf="@+id/editNewContinent" />

    <EditText
        android:id="@+id/editNewDomain"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_buttons"
        android:ems="10"
        android:hint="@string/editDomain"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="#E1E1E1"
        android:textColorHint="#E1E1E1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/editNewYear"
        app:layout_constraintStart_toStartOf="@+id/editNewYear"
        app:layout_constraintTop_toBottomOf="@+id/editNewYear" />

    <EditText
        android:id="@+id/editNewMortality"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_buttons"
        android:ems="10"
        android:hint="@string/editMortality"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="#E1E1E1"
        android:textColorHint="#E1E1E1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/editNewDomain"
        app:layout_constraintStart_toStartOf="@+id/editNewDomain"
        app:layout_constraintTop_toBottomOf="@+id/editNewDomain" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginTop="50dp"
        android:text="@string/regRegister"
        android:textColor="#E1E1E1"
        android:textColorHint="#E1E1E1"
        app:backgroundTint="#34972E"
        app:layout_constraintEnd_toEndOf="@+id/editNewPassword"
        app:layout_constraintStart_toStartOf="@+id/editNewPassword"
        app:layout_constraintTop_toBottomOf="@+id/editNewPassword" />

    <EditText
        android:id="@+id/editNewPassword"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_buttons"
        android:ems="10"
        android:hint="@string/editPassword"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="#E1E1E1"
        android:textColorHint="#E1E1E1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/editNewMortality"
        app:layout_constraintStart_toStartOf="@+id/editNewMortality"
        app:layout_constraintTop_toBottomOf="@+id/editNewMortality"  />

    <Button
        android:id="@+id/buttonSelectPhoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_photo_background"
        android:text="@string/regSelect"
        android:textColor="@color/font"
        android:textSize="13sp"
        app:backgroundTint="@android:color/transparent"
        app:iconTint="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/editNewFullname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circlePhoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:civ_border_color="@color/font"
        app:civ_border_width="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonSelectPhoto"
        app:layout_constraintEnd_toEndOf="@+id/buttonSelectPhoto"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/buttonSelectPhoto"
        app:layout_constraintTop_toTopOf="@+id/buttonSelectPhoto"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>