<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editPersonName"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/rounded_buttons"
        android:ems="10"
        android:hint="@string/editFullname"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="#E1E1E1"
        android:textColorHint="#E1E1E1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageScreen" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_buttons"
        android:ems="10"
        android:hint="@string/editPassword"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="#E1E1E1"
        android:textColorHint="#E1E1E1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/editPersonName"
        app:layout_constraintStart_toStartOf="@+id/editPersonName"
        app:layout_constraintTop_toBottomOf="@+id/editPersonName" />

    <Button
        android:id="@+id/buttonAuthorize"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginTop="40dp"
        android:text="@string/authAuthorize"
        android:textColor="#E1E1E1"
        app:backgroundTint="#34972E"
        app:layout_constraintEnd_toEndOf="@+id/editPassword"
        app:layout_constraintStart_toStartOf="@+id/editPassword"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <TextView
        android:id="@+id/newAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/authTextReg"
        android:textColor="@color/font"
        app:layout_constraintEnd_toEndOf="@+id/buttonAuthorize"
        app:layout_constraintStart_toStartOf="@+id/buttonAuthorize"
        app:layout_constraintTop_toBottomOf="@+id/buttonAuthorize" />

    <ImageView
        android:id="@+id/imageScreen"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_" />
</androidx.constraintlayout.widget.ConstraintLayout>