<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".EditActivity" >

    <ImageView
        android:id="@+id/imageSave"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/floppy_disk"
        app:layout_constraintEnd_toEndOf="@+id/editPass"
        app:layout_constraintTop_toBottomOf="@+id/editPass"
        app:tint="@color/font"
        tools:ignore="MissingConstraints"
        tools:srcCompat="@drawable/floppy_disk" />

    <Button
        android:id="@+id/buttonSelectPhotoEdit"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/button_photo_background"
        android:textSize="13sp"
        app:backgroundTint="@android:color/transparent"
        app:iconTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/circlePhotoEdit"
        app:layout_constraintEnd_toEndOf="@+id/circlePhotoEdit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/circlePhotoEdit"
        app:layout_constraintTop_toTopOf="@+id/circlePhotoEdit"
        app:layout_constraintVertical_bias="0.0" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circlePhotoEdit"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        app:civ_border_color="@color/font"
        app:civ_border_width="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonSelectPhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editMortality"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_buttons"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/editMortality"
        android:textColor="#E1E1E1"
        android:textColorHint="#E1E1E1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/editDomain"
        app:layout_constraintStart_toStartOf="@+id/editDomain"
        app:layout_constraintTop_toBottomOf="@+id/editDomain" />

    <EditText
        android:id="@+id/editVideolink"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_buttons"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/editVideolik"
        android:textColor="#E1E1E1"
        android:textColorHint="#E1E1E1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/editMortality"
        app:layout_constraintStart_toStartOf="@+id/editMortality"
        app:layout_constraintTop_toBottomOf="@+id/editMortality" />

    <EditText
        android:id="@+id/editPass"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_buttons"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/editPassword"
        android:textColor="#E1E1E1"
        android:textColorHint="#E1E1E1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/editVideolink"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editVideolink"
        app:layout_constraintTop_toBottomOf="@+id/editVideolink" />

    <EditText
        android:id="@+id/editYear"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_buttons"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/editYear"
        android:textColor="#E1E1E1"
        android:textColorHint="#E1E1E1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/editCountry"
        app:layout_constraintStart_toStartOf="@+id/editCountry"
        app:layout_constraintTop_toBottomOf="@+id/editCountry" />

    <EditText
        android:id="@+id/editDomain"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_buttons"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/editDomain"
        android:textColor="#E1E1E1"
        android:textColorHint="#E1E1E1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/editYear"
        app:layout_constraintStart_toStartOf="@+id/editYear"
        app:layout_constraintTop_toBottomOf="@+id/editYear" />

    <EditText
        android:id="@+id/editCountry"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_buttons"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/editCountry"
        android:textColor="#E1E1E1"
        android:textColorHint="#E1E1E1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/editContinent"
        app:layout_constraintStart_toStartOf="@+id/editContinent"
        app:layout_constraintTop_toBottomOf="@+id/editContinent" />

    <EditText
        android:id="@+id/editContinent"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_buttons"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/editContinent"
        android:textColor="#E1E1E1"
        android:textColorHint="#E1E1E1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/editFullname"
        app:layout_constraintStart_toStartOf="@+id/editFullname"
        app:layout_constraintTop_toBottomOf="@+id/editFullname" />

    <EditText
        android:id="@+id/editFullname"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/rounded_buttons"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/editFullname"
        android:textColor="#E1E1E1"
        android:textColorHint="#E1E1E1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circlePhotoEdit" />

</androidx.constraintlayout.widget.ConstraintLayout>