<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".FilterActivity">

    <Button
        android:id="@+id/buttonUseFilters"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginTop="120dp"
        android:text="@string/filterUse"
        android:textColor="#E1E1E1"
        android:textColorHint="#E1E1E1"
        app:backgroundTint="#34972E"
        app:layout_constraintEnd_toEndOf="@+id/textViewDomainFilter"
        app:layout_constraintStart_toStartOf="@+id/textViewDomainFilter"
        app:layout_constraintTop_toBottomOf="@+id/textViewDomain" />

    <TextView
        android:id="@+id/textViewYearFilter"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/border_spinner"
        android:gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/filterYear"
        android:textAlignment="center"
        android:textColor="@color/font"
        android:textColorHint="@color/font"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewMortalityFilter"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/border_spinner"
        android:gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/filterMortality"
        android:textAlignment="center"
        android:textColor="@color/font"
        android:textColorHint="@color/font"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewYearFilter"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewYearFilter"
        app:layout_constraintTop_toBottomOf="@+id/textViewYear" />

    <TextView
        android:id="@+id/textViewDomainFilter"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/border_spinner"
        android:gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/editDomain"
        android:textAlignment="center"
        android:textColor="@color/font"
        android:textColorHint="@color/font"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewMortalityFilter"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewMortalityFilter"
        app:layout_constraintTop_toBottomOf="@+id/textViewMortality" />

    <SeekBar
        android:id="@+id/seekBarYear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:progressBackgroundTint="@color/font"
        android:progressTint="@color/font"
        android:thumb="@drawable/seek_bar_slider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewYearFilter" />

    <SeekBar
        android:id="@+id/seekBarMortality"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:progressBackgroundTint="@color/font"
        android:progressTint="@color/font"
        android:thumb="@drawable/seek_bar_slider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMortalityFilter" />

    <SeekBar
        android:id="@+id/seekBarDomain"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:max="1"
        android:progress="1"
        android:progressBackgroundTint="@color/font"
        android:progressTint="@color/font"
        android:thumb="@drawable/seek_bar_slider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDomainFilter" />

    <TextView
        android:id="@+id/textViewYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="1800"
        android:textSize="16sp"
        android:textColor="#52BF39"
        android:textColorHint="#52BF39"
        app:layout_constraintEnd_toEndOf="@+id/seekBarYear"
        app:layout_constraintStart_toStartOf="@+id/seekBarYear"
        app:layout_constraintTop_toBottomOf="@+id/seekBarYear" />

    <TextView
        android:id="@+id/textViewMortality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="0%"
        android:textColor="#52BF39"
        android:textColorHint="#52BF39"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/seekBarMortality"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/seekBarMortality"
        app:layout_constraintTop_toBottomOf="@+id/seekBarMortality" />

    <TextView
        android:id="@+id/textViewDomain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/filterVirus"
        android:textColor="#52BF39"
        android:textColorHint="#52BF39"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/seekBarDomain"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/seekBarDomain"
        app:layout_constraintTop_toBottomOf="@+id/seekBarDomain" />
</androidx.constraintlayout.widget.ConstraintLayout>